# vocalTractCpp

./: .gitignore  README.md  a.out  cpp_class_test.cpp  output_strings_py.txt
01_dev_cpp/vocal_tract_autogen/: CMakeCache.txt  Makefile  cmake_install.cmake
01_dev_cpp/vocal_tract_original/: CMakeLists.txt
01_dev_cpp/vocal_tract_solve/: Makefile  run.sh
02_python/: 01_GRAPHS_tube_uniforme.ipynb  01_tube_uniforme.ipynb  01_tube_uniforme_FULL.ipynb  modify_core_solver.py  vocal_tract_constrained_cpp.py
02_python/.ipynb_checkpoints/: 01_GRAPHS_tube_uniforme-checkpoint.ipynb  01_tube_uniforme_FULL-checkpoint.ipynb
03_comparison/: 00_comparison.ipynb
03_comparison/.ipynb_checkpoints/: 00_comparison-checkpoint.ipynb
04_debug_cpp/vocal_tract/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  log_conditionnement_matrice.txt  log_residu.txt
04_debug_cpp/vocal_tract/src/: core.cpp  core.h  parameters.cpp  parameters.h  simu.cpp
comparison/: 00_comparison.ipynb
comparison/.ipynb_checkpoints/: 00_comparison-checkpoint.ipynb
python/: 01_GRAPHS_tube_uniforme.ipynb  01_tube_uniforme.ipynb  01_tube_uniforme_FULL.ipynb  01_tube_uniforme_dev_code_modifs.ipynb  modify_core_solver.py  vocal_tract_constrained_cpp.py
python/.ipynb_checkpoints/: 01_tube_uniforme-checkpoint.ipynb
python/automatic_core_modifs/: code_generation.py
python/string_format_tests/: new_core.h  (+2 more)
vocal_tract/: Makefile
vocal_tract_autogen/: CMakeLists.txt
vocal_tract_original/: CMakeCache.txt  cmake_install.cmake
vocal_tract_solve/: CMakeCache.txt  cmake_install.cmake  run.sh
(+34 files in other folders)
